# TideSync

./: .env.example  .gitignore  NOTICE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/workflows/: pages.yml
docs/: Optative.md  Qwen-Omni-Realtime 系列-全模态模型的工具调用.md  Qwen3.5-Omni-Flash-Realtime-API.md  Qwen3.5-Omni-Flash-Realtime.md  omni-realtime_zipball_0.0.3  能力差距简报.md  题目原文.md
docs/bookshelf/: README.md  catalog.adoc  package.json
docs/bookshelf/books/00-book-anatomy/: book.adoc
docs/bookshelf/books/00-book-anatomy/backmatter/: appendix-a.adoc  bibliography.adoc  glossary.adoc  index.adoc
docs/bookshelf/books/00-book-anatomy/frontmatter/: abstract.adoc  acknowledgments.adoc  colophon.adoc  dedication.adoc  preface.adoc
docs/bookshelf/books/01-starter-book/: book.adoc
docs/bookshelf/books/01-starter-book/backmatter/: appendix-a.adoc  bibliography.adoc
docs/bookshelf/books/01-starter-book/chapters/: 01-opening.adoc  02-main-flow.adoc
docs/bookshelf/books/01-starter-book/frontmatter/: preface.adoc
docs/bookshelf/books/02-multipart-monograph/: book.adoc
docs/bookshelf/books/02-multipart-monograph/backmatter/: appendix-a.adoc  bibliography.adoc
docs/bookshelf/books/03-technical-book-workflow/: book.adoc
docs/bookshelf/books/03-technical-book-workflow/backmatter/: bibliography.adoc
docs/bookshelf/books/03-technical-book-workflow/chapters/: 01-build-flow.adoc  02-diagrams.adoc  03-code-includes.adoc
docs/bookshelf/books/03-technical-book-workflow/examples/: minimal-tool.mjs
docs/bookshelf/books/03-technical-book-workflow/frontmatter/: preface.adoc
docs/bookshelf/books/04-reference-manual/: book.adoc
docs/bookshelf/books/05-upper-volume/: book.adoc
docs/bookshelf/books/06-lower-volume/: book.adoc
docs/bookshelf/books/07-structured-writing-conventions/: book.adoc
docs/bookshelf/books/08-realtime-omnimodal-call-experience-spec/: book.adoc
docs/bookshelf/books/09-qwen35-omni-realtime-websocket-adapter-contract/: book.adoc
docs/bookshelf/shared/: attributes.adoc
docs/bookshelf/tools/: adoc-books.mjs
docs/deep-research/: 01-实时视频语音 AI 开源方案调查结论.md  02-TideSync Qwen Realtime 能力与适配层调查报告.md  03-Qwen35-Omni-Realtime-Vision-Agents-完整适配缺口调查报告.md  04-Qwen35-Omni-Realtime-剩余未知项与工具调用补充调查报告.md  05-TideSync Qwen Omni 调试前端完整蓝图汇报.md  05.1-hegel-qwen-omni-sdk-cross-check-report-20260614.md
docs/plans/: 2026-06-14-qwen35-omni-remaining-unknowns-subagent-prompt.md  2026-06-14-qwen35-omni-vision-agents-adapter-audit-subagent-prompt.md
docs/qwen35-omni-adapter-contract/pr-bodies/: batch-01-session-config-and-client-senders.md
docs/qwen35-omni-adapter-contract/reports/: batch-01-session-config-and-client-senders.md
docs/raws/: raw1.md  raw2.md  raw3.md
docs/superpowers/plans/: 2026-06-13-vision-agents-qwen-stream.md
forks/vision-agents-qwen-native/: GOVERNANCE.md  README.md  UPSTREAM.adoc  团队仓库的 PR 留痕与变更接纳工作流.md
forks/vision-agents-qwen-native/agents-core/: pyproject.toml
forks/vision-agents-qwen-native/agents-core/vision_agents/cli/: __init__.py  __main__.py  errors.py  main.py
forks/vision-agents-qwen-native/agents-core/vision_agents/cli/agent/: __init__.py  command.py  config.py  dispatch.py  models.py
forks/vision-agents-qwen-native/agents-core/vision_agents/cli/init/: __init__.py  command.py  scaffold.py  uv.py
forks/vision-agents-qwen-native/agents-core/vision_agents/cli/init/templates/: README.md.j2  agent.py.j2  env.example.j2  pyproject.toml.j2
forks/vision-agents-qwen-native/agents-core/vision_agents/cli/init/templates/tests/: test_agent.py.j2
forks/vision-agents-qwen-native/agents-core/vision_agents/core/: __init__.py  base.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/agents/: agent_types.py  agents.py  conversation.py  events.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/agents/inference/: __init__.py  audio.py  base.py  llm_turn.py  realtime_flow.py  transcribing_flow.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/agents/session_registry/: redis_store.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/agents/transcript/: buffer.py  store.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/avatars/: __init__.py  av_synchronizer.py  avatar.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/edge/: edge_transport.py  events.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/events/: __init__.py  base.py  manager.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/llm/: events.py  function_registry.py  llm.py  realtime.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/observability/: collector.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/processors/: base_processor.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/rag/: rag.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/runner/: runner.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/stt/: __init__.py  events.py  stt.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/tts/: events.py  tts.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/turn_detection/: __init__.py  turn_detection.py
forks/vision-agents-qwen-native/agents-core/vision_agents/core/utils/: exceptions.py  stream.py  text.py  tokenizer.py  video_utils.py
forks/vision-agents-qwen-native/agents-core/vision_agents/testing/: __init__.py  _judge.py  _mock_tools.py  _session.py  _utils.py
forks/vision-agents-qwen-native/docs/qwen35-omni-adapter-contract/: coordinator-state.md  final-conformance-statement.md
forks/vision-agents-qwen-native/plugins/getstream/: README.md  _generate_sfu_events.py  pyproject.toml
forks/vision-agents-qwen-native/plugins/qwen/: README.md  pyproject.toml
src/: bin.ts  cli.test.ts  cli.ts  index.ts
src/tidesync/: __init__.py  agent.py
tests/: test_hello.py  test_vision_agents_runtime_path.py
(+208 files in other folders)
