[project]
name = "tidesync"
version = "0.1.0"
description = "tidesync 初始化uv工作区模板"
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "socksio>=1.0.0",
    "vision-agents>=0.6.4,<0.7",
    "vision-agents-plugins-getstream>=0.6.4,<0.7",
    "vision-agents-plugins-qwen>=0.6.4,<0.7",
]

[project.scripts]
tidesync-agent = "tidesync.agent:main"

[dependency-groups]
dev = [
    "basedpyright>=1.36.0",
    "freezegun>=1.5.5",
    "pyfakefs>=5.10.2",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-json-report>=1.5.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
vision-agents = { path = "forks/vision-agents-qwen-native/agents-core", editable = true }
vision-agents-plugins-getstream = { path = "forks/vision-agents-qwen-native/plugins/getstream", editable = true }
vision-agents-plugins-qwen = { path = "forks/vision-agents-qwen-native/plugins/qwen", editable = true }

# ========================================
# Basedpyright - 目录级别类型检查 (新策略：默认推荐)
# ========================================
[tool.basedpyright]
# 全局默认：推荐模式

# BasedPyright 支持以下几种类型检查模式：
# off - 完全关闭类型检查
# basic - 基本类型检查
# standard - 标准类型检查
# strict - 严格类型检查
# recommended - 推荐类型检查
# all - 最严格的类型检查（BasedPyright 特有）

typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src"]
exclude = [
    "**/__pycache__",
    "tests",
    "tests/**",
    "**/tests",
    "**/tests/**",
    "**/test_*.py",
    "**/*_test.py",
    "**/.venv"
]

# 其他配置保持默认即可
reportMissingTypeStubs = false
enableTypeIgnoreComments = false # 不强制要求第三方库的类型存根
enableReachabilityAnalysis = false # 禁用旧的可达性分析标记 推荐使用更准确的 reportUnreachable 诊断规则

# 将不可达代码报告设置为 "none" 以完全禁用此检查 
reportUnreachable = "none"

executionEnvironments = [

]

# ========================================
# Ruff - 目录级别代码规范
# ========================================
[tool.ruff]
extend-exclude = ["forks"]
line-length = 320
target-version = "py313"

[tool.ruff.lint]
# 全局启用严格规则
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "ANN",    # flake8-annotations（类型注解）
    "C4",     # flake8-comprehensions
]

# 忽略特定规则
ignore = [
    "B008",   # typer.Argument在默认参数中是合法用法
    "E501",
]

# 针对测试文件的特殊配置
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # 测试文件不强制类型注解
    "B017",    # pytest.raises(Exception) is acceptable in tests
    "E402",    # Module level import not at top (allowed in tests)
    "E501",    # Line too long (test assertions can be long)
    "F841",    # Unused local variable (test fixtures)
    "D",      # 也可以考虑忽略 Docstrings
    "S101",   # 允许使用 assert (测试必备)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ========================================
# Pytest - 测试配置
# ========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "-v",              # verbose
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "--cov=tidesync",  # 修改为正确的模块路径
    "--cov-branch",
    "--cov-report=term-missing",
]

# 为不同类型的测试设置标记
markers = [
    "contract: Qwen realtime adapter contract and event replay tests",
    "integration: tests that require a live service, network, or external credentials",
    "slow: tests that are intentionally slower than the default unit suite",
]
asyncio_mode = "auto"

[tool.vision-agents.agent]
entrypoint = "tidesync.agent:runner"
